fixed overflow-auto for pre-elements inside flexbox

--- a/source/assets/stylesheets/style.css.scss
+++ b/source/assets/stylesheets/style.css.scss
@@ -116,6 +116,7 @@ img {
     flex: 1 0 0;
     margin: 0;
     padding: $margin-m $margin-m 0 $margin-m;
+    min-width: 0;
   }
 
   .cols-2 {
